TM-12140 - CSS modifications for close buttons in modal dialogs

--- a/web-app/css/elements/support/jqDialog.sass
+++ b/web-app/css/elements/support/jqDialog.sass
@@ -50,15 +50,13 @@ div.ui-dialog
       -webkit-appearance: none
       padding: 0
       cursor: pointer !important
-      background: 0 0 !important
+      background: 0 0
       border: 0 !important
       font-size: 17px !important
       margin-right: 5px !important
       color: $material_c_blue1
       span.ui-icon
-        background-image: url(../plugins/jquery-ui-1.10.4/jquery-ui/themes/ui-lightness/images/ui-icons_ffffff_256x240.png)
-        font-size: 17px !important
-        margin-right: 2px !important
+        display:none !important
     button.ui-dialog-titlebar-close:hover
       text-decoration: none !important
       cursor: pointer !important
