TM-12081 Fixed some UI issues on all Asset Dialogs

--- a/web-app/css/shared-legacy-angular/dates-info.sass
+++ b/web-app/css/shared-legacy-angular/dates-info.sass
@@ -2,6 +2,7 @@
   border: none!important
   font-size: 10px
   padding-top: 0!important
+  width: 100%
   .date-created
     padding: 2px
     font-size: inherit
