TM-12140 - migration of icon location and css to sass.

--- a/web-app/css/elements/support/jqDialog.sass
+++ b/web-app/css/elements/support/jqDialog.sass
@@ -55,6 +55,11 @@ div.ui-dialog
       font-size: 17px !important
       margin-right: 5px !important
       color: $material_c_blue1
+      width: 16px;
+      height: 16px;
+      background-position: -97px -129px
+      background-image: url(/tdstm/static/images/ui-icons_ffffff_256x240.png) !important
+      background-color: initial !important
       span.ui-icon
         display:none !important
     button.ui-dialog-titlebar-close:hover
