--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -281,7 +281,7 @@
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Close</span>
                 </button>
-                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasTaskPermission">
+                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete" [disabled]="!hasDeleteTaskPermission">
                     <span  class="glyphicon glyphicon-trash"></span>
                     <span>Delete</span>
                 </button>
