--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -119,6 +119,9 @@
           flex-direction: column
         .dates-info-container
           display: flex
+          .dates-info
+            padding-left: 5px
+            padding-right: 5px
     .modal-footer
       padding: 15px 18px
 
