TM-11703 Detect double assignment tasks

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -323,6 +323,9 @@
                             <tr class="deps no-grow-container">
                                 <table>
                                     <tr>
+                                        <td colspan="2" class="have-double-assignment" *ngIf="modelHelper.haveDoubleAssignment()">One or more tasks are assigned as both a Predecessor and Successor which is not allowed.</td>
+                                    </tr>
+                                    <tr>
                                         <td valign="top">
                                             <kendo-grid
                                                     *ngIf="dataGridTaskPredecessorsHelper"
@@ -346,7 +349,7 @@
                                                         <!-- Header Template -->
                                                         <ng-template kendoGridHeaderTemplate>
                                                             <label>{{column.label}}</label>
-                                                            <label *ngIf="hasDuplicates(model.predecessorList)" class="duplicate-error">There are duplicate entries</label>
+                                                            <label *ngIf="modelHelper.hasDuplicatedPredecessors()" class="duplicate-error">There are duplicate entries</label>
                                                         </ng-template>
 
                                                         <ng-template kendoGridCellTemplate *ngIf="column.property === 'desc'" let-dataItem let-rowIndex="rowIndex">
@@ -386,7 +389,7 @@
                                                     <!-- Header Template -->
                                                     <ng-template kendoGridHeaderTemplate>
                                                         <label>{{column.label}}</label>
-                                                        <label *ngIf="hasDuplicates(model.successorList)" class="duplicate-error">There are duplicate entries</label>
+                                                        <label *ngIf="modelHelper.hasDuplicatedSuccessors()" class="duplicate-error">There are duplicate entries</label>
                                                     </ng-template>
 
                                                     <ng-template kendoGridCellTemplate *ngIf="column.property === 'desc'" let-dataItem let-rowIndex="rowIndex">
