--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -47,7 +47,7 @@
                                                         </kendo-dropdownlist>
                                                     </td>
                                                     <td class="label url U" nowrap="nowrap">
-                                                        <label><span>Asset class</span></label>
+                                                        <label><span>Asset Class</span></label>
                                                     </td>
                                                     <td class="valueNW">
                                                         <kendo-dropdownlist
@@ -66,7 +66,7 @@
                                                         <tds-combobox
                                                                 [(model)]="model.asset"
                                                                 [(metaParam)]="model.assetClass.id"
-                                                                (valueChange)="onModelChange($event)"
+                                                                (valueChange)="onAssetEntityChange($event)"
                                                                 [serviceRequest]="getAssetList">
                                                         </tds-combobox>
                                                     </td>
@@ -323,7 +323,7 @@
                             <tr class="deps no-grow-container">
                                 <table>
                                     <tr>
-                                        <td colspan="2" class="have-double-assignment" *ngIf="modelHelper.haveDoubleAssignment()">One or more tasks are assigned as both a Predecessor and Successor which is not allowed.</td>
+                                        <td colspan="2" class="have-double-assignment" *ngIf="modelHelper.hasDoubleAssignment()">One or more tasks are assigned as both a Predecessor and Successor which is not allowed.</td>
                                     </tr>
                                     <tr>
                                         <td valign="top">
