--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -356,7 +356,7 @@
                                                             <!--<label class="pointer pad-left-7" (click)="openTaskDetail(dataItem, modalType.VIEW)">{{dataItem.desc}}</label>-->
                                                             <tds-combobox
                                                                     [(model)]="dataItem.model"
-                                                                    [(metaParam)]="dataItem.id"
+                                                                    [(metaParam)]="model.id"
                                                                     (valueChange)="onModelChange($event)"
                                                                     [serviceRequest]="getTasksForComboBox"
                                                                     (selectionChange)="onDependencyTaskChange($event, 'predecessor', dataGridTaskPredecessorsHelper,  rowIndex)">
@@ -396,7 +396,7 @@
                                                         <!--<label class="pointer pad-left-7" (click)="openTaskDetail(dataItem, modalType.VIEW)">{{dataItem.desc}}</label>-->
                                                         <tds-combobox
                                                                 [(model)]="dataItem.model"
-                                                                [(metaParam)]="dataItem.id"
+                                                                [(metaParam)]="model.id"
                                                                 (valueChange)="onModelChange($event)"
                                                                 [serviceRequest]="getTasksForComboBox"
                                                                 (selectionChange)="onDependencyTaskChange($event, 'successor', dataGridTaskSuccessorsHelper,  rowIndex)">
