TM-11703  Select a asset class should reset asset type

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -56,6 +56,7 @@
                                                                 [data]="model.assetClasses"
                                                                 [textField]="'text'"
                                                                 [valueField]="'id'"
+                                                                (selectionChange)="onAssetClassChange($event)"
                                                                 [(ngModel)]="model.assetClass">
                                                         </kendo-dropdownlist>
                                                     </td>
